--- a/Sources/Background/Nature_of_Light/Mueller_Matrices.tex
+++ b/Sources/Background/Nature_of_Light/Mueller_Matrices.tex
@@ -32,6 +32,7 @@ It has been shown that these parameters can be found by determining a sample's c
 %    \emphasis{Retardance} = cos^{-1}(\frac{tr(M_{ret})}{2}-1) \\
 %    \emphasis{Depolarization} = 1 - \frac{\sqrt{\sum_{i,j}m_{ij}^2} -m_{00}^2}{\sqrt{3}m_{00}^2}
 \end{align}
+[TODO explain these equations or remove them]
 
 For nondepolarizing materials, their MM can be converted into Jones matrices.   Examples of Mueller Matrices for common optical elements can be found in [7].  The general form of a linear polarizer with transmission axis at 0 degrees to the $x$ axis is
 %
