--- a/Sources/Background/Nature_of_Light/Nature_of_Light.tex
+++ b/Sources/Background/Nature_of_Light/Nature_of_Light.tex
@@ -2,8 +2,15 @@
 \section{The Nature of Light and the Electromagnetic Spectrum}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Light is fundamental to life.  In Maxwell’s’ theory on light he explained how electromagnetic phenomenon can be expressed in terms of waves [6].  These waves move at the speed of light.  The light that human eyes can detect is a small portion of the electromagnetic spectrum called ‘visible light’.
-
-TODO [insert EM image here]
+%
+%CHECK [insert EM image here]
+\begin{figure}[!htb]
+    \begin{center}
+        \makebox[\textwidth]{\includegraphics[scale=0.75]{/Sources/Background/Nature_of_Light/EM-spectrum.png}}
+    \end{center}
+    \caption{Electromagnetic Spectrum - Partial}
+    \label{fig:polarization}
+\end{figure}
 Different frequencies of light correspond to different colors on the visible spectrum.  These waves are made up of two parts, the electric and magnetic.  Due to their similar nature often only the electrical portion is considered at first for mathematical simplicity.
 
 The electrical portion of EM waves, and the only portion considered here, can be described as the sum of two sinusoidal waves representing the orthogonal x and y components in Cartesian space.
@@ -22,7 +29,7 @@ Light can also be viewed as packets of energy known as photons.  The energy of p
 %
 \begin{align}
 	h=6.62e-34 [m^2 kg/s]\\
-	E=hv
+	E=hv [Joules]
 \end{align}
 %
 This simple equation shows that for higher frequencies, particles have higher energy.
