--- a/Sources/Background/Nature_of_Light/Reflection_Transmission.tex
+++ b/Sources/Background/Nature_of_Light/Reflection_Transmission.tex
@@ -52,7 +52,7 @@ The Mueller matrix formulation for reflection and transmission reduces to the fo
         S_{3r}
     \end{bmatrix}
     =
-% TODO
+% TODO fix error here
 %    \frac{1}{2}(\frac{tan(\theta_{_})}{sin(\theta_{+})})^2
 %    \begin{bmatrix}
 %        cos^2(\theta_{_}) + cos^2(\theta_+) & cos^2(\theta_{_}) - cos^2(\theta_+) & 0 & 0 \\
