--- a/Sources/Conclusion/Conclusion.tex
+++ b/Sources/Conclusion/Conclusion.tex
@@ -4,12 +4,18 @@
 \begin{center}
   \begin{minipage}{0.75\textwidth}
     \begin{small}
-      “The interaction between material bodies can be described either by formuating the action at a distance between the interacting bodies or by separating the interaction process into the production of a field by one system and the action so the field on another system” .
-      \emph{Classical Electricity \& Magnetism. Panofksy, Phillips}\\.
+      “It would not be much of a universe if it wasn't home to the people you love.”\\
+      \null\hfill\emph{Stephen Hawking}
     \end{small}
   \end{minipage}
   \vspace{0.5cm}
 \end{center}
+
+The need for precisely monitoring the health of vegetation as resources become more scare will become a necessity for human survival. The sensing technologies involved with satellites, drones, and indoor greenhouses  provide information the first steps in technologies towards understanding photon vegetation interactions.  Understanding the processes involved and influenced by these interactions allows for the potential to gain deeper understanding into the data we acquire.
+
+The initial assumption of the diffuse portion of light being an unpolarized scattering mechanism is starting to give way with new experimentation and research into the properties of this interaction with a wide variety of materials and substances showing there is information to be gained in observing the polarization in the diffuse portion.  Texture has been used in remote sensing technologies for the purpose of classifying the various areas within an image.  The inclination to bring these ideas to micro scale agricultural systems in greenhouses throughout the solar system can be useful going forward as interest in this field grows.
+
+This research has set a foundation for a discussion surrounding the information to be gained from observing the polarization response that results from incident unpolarized light onto a leafs surface. Images were acquired with plants in various physiological conditions, including decomposition and water stress.  The texture of the leafs' surface was observed to change as these processes progressed.
 
 The polarization created by a material when unpolarized light is incident, as in most natural settings, has been shown to reveal distinguishing characteristics for determining both the species and physiological state of vegetation.  Although normally assumed to be unpolarized, the diffuse portion of reflectance contains information that can be useful for classification and plant health analysis.  The specular portion of light also contains distinguishing information and in our results provided better classification.
 
@@ -17,11 +23,10 @@ As areas in precision agriculture expand into areas of indoor growing operations
 
 Results for Red Oak have been provided in detail for this report as it provides the simplest explanation for the results.  Each species provides slightly different results depending on its composition.  Further explanation would have to be given at an individual species level to account for these results.
 
-The relative water content of leaves is shown to be correlated with both its texture and polarization response when captured by a digital microscope.
+The relative water content of leaves is shown to be correlated with both its texture and polarization response when captured by a digital microscope behind a rotating linear polarizer.
 
-Further improvements to experiment design, plant health status control, image acquisition should be taken to improve the results of regression [TODO explain what and which]. Different light sources should be investigated to determine the consistency of our results.  Image segmentation may prove beneficial to isolating the effects of localized features.  Physiological indicators, such as pigment concentrations, in addition to relative water content should be investigated to further show health status and correlate the polarization response.
+Further improvements to experiment design, plant health status control, image acquisition and segmentation should be taken to improve the results of regression.  Plants can be controlled at a finer level when grown by starting seeds from scratch in a controlled environment.  Inputs to each individual plant could be altered including various fertilizers and water amounts.  Paper chromatography methodologies,as discussed in [35] could be used for determining the various distribution of pigments throughout smaller subsections of the leaves.  By creating false images with polarization and texture information, smaller sections of leaves could be isolated and correlated with each feature.  Image acquisition could be improved by reducing the amount of undulations on a leafs surface, in order to reduce the amount of effects that arise from masking and shadowing.  Different light sources should be investigated to determine the consistency of our results.  Image segmentation may prove beneficial to isolating the effects of localized features.  Physiological indicators, such as pigment concentrations, in addition to relative water content should be investigated to further show health status and correlate the polarization response.
 
-Overall this study has provided a basis for many of the principles required for understanding the micro scale concepts involved with the remote sensing of vegetation. Improvements to current models and suggestions for areas of further study, have been provided.
+In the area of polarization and texture modeling, examples could be given as to how various textures, such as sandpaper, glass, etc. are related to their polarization response in a simplistic model.
 
-[TODO change GLCM to use symbols that are color agnostic triangle, circle, X]
-[TODO make graphs bigger]
+Overall this study has provided a basis for many of the principles required for understanding the micro scale concepts involved with the sensing of vegetation. Improvements to current models and suggestions for areas of further study, have been provided.
