--- a/Sources/Background/Background.tex
+++ b/Sources/Background/Background.tex
@@ -4,8 +4,8 @@
 \begin{center}
   \begin{minipage}{0.75\textwidth}
     \begin{small}
-      “The interaction between material bodies can be described either by formuating the action at a distance between the interacting bodies or by separating the interaction process into the production of a field by one system and the action of the field on another system” .
-      \emph{Classical Electricity \& Magnetism. Panofksy, Phillips}\\.
+      “The interaction between material bodies can be described either by formuating the action at a distance between the interacting bodies or by separating the interaction process into the production of a field by one system and the action of the field on another system”. \\
+      \null\hfill\emph{Classical Electricity \& Magnetism. Panofksy, Phillips}
     \end{small}
   \end{minipage}
   \vspace{0.5cm}
