--- a/Sources/Background/Nature_of_Light/Jones_Vectors.tex
+++ b/Sources/Background/Nature_of_Light/Jones_Vectors.tex
@@ -35,7 +35,7 @@ Since only the relative phase differences matter it is common to denote $\delta=
 An angle can then be defined such that
 %
 \begin{align}
-    tan(\psi) = \frac{E_0y}{E_0x}
+    tan(\psi) = \frac{E_{0y}}{E_{0x}}
 \end{align}
 %
 The Jones vector can then be written in terms of a single angle
@@ -190,7 +190,7 @@ Wave plates create a phase delay between the fast and slow axis of incident line
 %
 Two common wave plates are the half wave plate and the quarter wave plate.  These produce a delay of $\pi$ and $\pi/2$ respectively.
 
-The noobelectric python package has a module for dealing with these types of problems and it is easy to do Jones optical calculations for purely polarized light beams.  An example for a linear polarizer combined with a quarter wave plate can be created and various input polarization states into the system as shown below.
+The noobelectric python package has a module for dealing with these types of problems and it automates Jones optical calculations for purely polarized light beams.  An example for a linear polarizer combined with a quarter wave plate can be created and various input polarization states into the system as shown below.
 \begin{lstlisting}
 >>> from noobee.jones import j, lp
 >>> j_in = j(1,0)
