--- a/Sources/Experimental_Design/Experimental_Design.tex
+++ b/Sources/Experimental_Design/Experimental_Design.tex
@@ -5,24 +5,41 @@
   \begin{minipage}{0.75\textwidth}
     \begin{small}
       ““I have not failed. I've just found 10,000 ways that won't work”.\\
-      \null\hfill\emph{Thomas Edison}.
+      \null\hfill\emph{Thomas Edison}
     \end{small}
   \end{minipage}
   \vspace{0.5cm}
 \end{center}
 
-This experiment was designed to investigate the linear polarizance vector of the Mueller matrix for various species of tree leaves in the diffuse and specular directions.  Leaves were investigated in different physiological states determined by both decomposition time and relative water content.
+[CHECK] In order to demonstrate the effectiveness of polarization and texture features with support vector machines for the purpose of classification and relative water content determination, experiments were devised, conducted and analyzed. These experiments was designed to investigate the linear polarizance vector of the Mueller matrix for various species of tree leaves in the diffuse and specular directions.  Leaves were investigated in different physiological states determined by both decomposition time and relative water content.  Classification and regression techniques were used to correlate the polarization and texture information from images acquired of various species of leaves.  Data for Red Oak, American Ash and Sugar Maple leaves was acquired for the purpose of classification.  Devils Ivy was observed in studies on relative water content.  
 
-Specular reflections are well known to create highly polarized light [sources]. The diffuse portion of reflection has been less investigated.  It has often been assumed that the diffuse portion is unpolarized due to multiple scattering and volume scattering caused by type B and C photons creating random orientations of light.  Recently the polarization of the diffuse component has been observed in studies [] to show indicators of physiological, chemical, and biological status.  The experiments presented here, attempt to demonstrate results that agree with previous outlined light leaf interactions in the specular direction, as well as extend the analysis for the diffuse direction.  The acquired polarization and texture data is processed for the purpose of determining the surface texture and internal scattering mechanisms for classification between various species, and investigation into the differences in these processes during decomposition and water stress conditions.
+Specular reflections are well known to create highly polarized light [26,31]. The diffuse portion of reflection has been less investigated.  It has often been assumed that the diffuse portion is unpolarized due to multiple scattering and volume scattering caused by type B and C photons creating random orientations of light.  Recently the polarization of the diffuse component has been observed in studies [32, 33] for the purpose of determining the geometry of various surfaces.  In the experiments reported here, the diffuse portion was observed for indicators of physiological, chemical, and biological status for individual plant leaves. It was assumed that as the leaf surfaces decomposes or losses water content, the surface would become rougher as the epicuticle wax layer changed. The experiments presented here, attempt to demonstrate results that agree with previous outlined light leaf interactions in the specular direction, as well as extend the analysis for the diffuse direction.  The acquired polarization and texture data is processed for the purpose of determining the surface texture and internal scattering mechanisms for classification between various species, and investigation into the differences in these processes during decomposition and water stress conditions.
 
-There are numerous challenges to practical applications of BRDF models due to the large amount of measurements required to classify an object's reflective polarization properties.  A digital microscope was utilized for the purpose of quantifying regions on leaves that including different surface structures such as veins, mold, undulations, cell walls, etc.
+There are numerous challenges to practical applications of BRDF models due to the large amount of measurements required to classify an object's reflective polarization properties.  A digital microscope was utilized for the purpose of quantifying regions on leaves that include different surface structures such as veins, mold, undulations, cell walls, etc.
 
-The polarizance of a material represents the first column of its Mueller Matrix, and determines the amount of polarization that results from unpolarized incident light.  These elements represent the linear polarization that results from the light material interactions, and can be useful for characterizing a material.  The polarizance can easily be acquired using simple light measuring Polarimetry techniques, when the incident light is unpolarized.  The reduction of measurements required to determine this vector is severely reduced when compared to other measurement techniques.
+The polarizance of a material represents the first column of its Mueller Matrix, and determines the amount of polarization that results from unpolarized incident light.  These elements represent the linear polarization that results from the light material interactions, and can be useful for characterizing a material.  The polarizance can easily be acquired using simple light measuring Polarimetry techniques, when the incident light is unpolarized.  The measurements required to determine this vector is severely reduced when compared to other measurement techniques.
 
-All measurements were performed using light incident at approximately the Brewster angle of 55 degrees.  This is the Brewster angle calculated between air and glass.  The index of refraction for leaves is estimated to be between 1.3 and 1.6. Specular observations were observed at 55 degrees from the normal to the plane of incidence.  The diffuse measurements were taken at 0 degrees from the normal.
+All measurements were performed using light incident at approximately the Brewster angle of 55 degrees [CHECK]. This is the Brewster angle calculated between air and glass.  The index of refraction for leaves is estimated to be between 1.3 and 1.6. Specular observations were observed at 55 degrees [CHECK] from the normal to the plane of incidence.  The diffuse measurements were taken at 0 degrees from the normal.
 
+The Brewster angle was chosen since it represents the angle where light reflected from an ideal specular surface would be highly polarized.  In the natural environment leaves are in various orientations to the normal surface of a plant canopy.  It is typical to extend the results from micro level leaf studies to canopies by creating probability distribution models that can predict the various leaf orientations.  Combining the results from individual leaf studies with probability models should provide more accurate information for interpreting plant image data. The experimental setups for the diffuse and specular components can be found in Figure and Figure.
+%
+\begin{figure}[!htb]
+    \begin{center}
+        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Experimental_Design/specular-exp.png}}
+    \end{center}
+    \caption{Specular Experimental Setup}
+    \label{fig:Experiment}
+\end{figure}
+\begin{figure}[!htb]
+    \begin{center}
+        \makebox[\textwidth]{\includegraphics[scale=0.5]{/Sources/Experimental_Design/diffuse-experiment.png}}
+    \end{center}
+    \caption{Diffuse Experimental Setup}
+    \label{fig:Experiment}
+\end{figure}
+%
 Using measurements acquired through a linear polarizer, the polarizance of each sample was calculated and plotted as a histogram.  The measurements were acquired using a digital microscope which produced images for each orientation of the polarizing filter.  These images were additionally processed for texture feature extraction using GLCM techniques.
 
 Each color image was split into its individual color channel to apply greyscale imaging techniques for pseudo-spectral analysis.
 
-Extracted features were observed and utilized for the purpose of classification among species, and determining the relative water content of individual leaves.
+Extracted features were observed and utilized for the purpose of classification among species, and determining the relative water content of individual leaves using regression analysis [CHECK].  For each type of experiment the same orientation of polarizer and camera was used to capture images in the diffuse and specular directions.
